# mt-rust

./: Cargo.toml  flake.nix  index.html
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1pv0py2bcvhsqyy2lc1l0wwf0nvmgrdr-source
content/: 2830.org  _index.org  about.org  advent-2023.org  compassion.org  cube-mnemonics.org  first-brick.org  first.org  index.org  nighthawk.org  regarding-seattle.org  riverrun.org  splint.org  sub30.org
css/: style.css
css/fonts/: CharisSIL-webfont-example.css  CharisSIL-webfont-example.html
src/: main.rs  watch.rs
static/: fonts.css  index.html  me.jfif  sidenotes.css  style.css
