[package]
name = "meatlesstrainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["watch"]
watch = ["notify-debouncer-mini", "tungstenite", "crossbeam-channel", "file-serve"]

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
crossbeam-channel = { version = "0.5.8", optional = true }
file-serve = { version = "0.3.0", optional = true }
maud = "*"
notify-debouncer-mini = { version = "0.4.1", optional = true }
orgize = "0.9.0"
tap = "1.0.1"
tungstenite = { version = "0.20.1", optional = true }
url = "2.4.1"

